--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.0.10",
     "axios": "^1.6.7",
     "firebase": "^10.9.0",
     "localforage": "^1.10.0",
@@ -25,7 +27,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0"
+    "react-stripe-js": "^1.1.5",
+    "sort-by": "^1.2.0",
+    "stripe": "^14.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
