--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.12",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.0.10",
+    "@tanstack/react-query": "^5.28.4",
     "axios": "^1.6.7",
     "firebase": "^10.9.0",
     "localforage": "^1.10.0",
