--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.22.3",
     "react-stripe-js": "^1.1.5",
     "sort-by": "^1.2.0",
-    "stripe": "^14.21.0"
+    "stripe": "^14.21.0",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
