--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll-trigger": "^0.6.14",
     "react-stripe-js": "^1.1.5",
     "sort-by": "^1.2.0",
     "stripe": "^14.21.0",
