--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@smastrom/react-rating": "^1.5.0",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.0.10",
     "@tanstack/react-query": "^5.28.4",
@@ -34,7 +35,8 @@
     "react-stripe-js": "^1.1.5",
     "sort-by": "^1.2.0",
     "stripe": "^14.21.0",
-    "sweetalert2": "^11.10.6"
+    "sweetalert2": "^11.10.6",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
