--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.0.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll-to-top": "^3.0.0",
     "react-scroll-trigger": "^0.6.14",
     "react-stripe-js": "^1.1.5",
     "sort-by": "^1.2.0",
