--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.22.3",
     "react-scroll-to-top": "^3.0.0",
     "react-scroll-trigger": "^0.6.14",
+    "react-share": "^5.1.0",
     "react-stripe-js": "^1.1.5",
     "sort-by": "^1.2.0",
     "stripe": "^14.21.0",
